# infa_2022-2-_Yarik_C-

./: PacMan  Pacman  README.md  Rectangle.cpp  States.cpp
Project "PacMan"/: CMakeLists.txt  PacMan
